refactor: debug